globus-gssapi-gsi (11.20-1+gt6.@distro@) @distro@; urgency=low

  * GT-614: GLOBUS_GSS_C_NT_HOST_IP doesn't allow host-only imports and comparisons

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jul 2015 15:13:43 -0400

globus-gssapi-gsi (11.19-1+gt6.@distro@) @distro@; urgency=low

  * export config file values into environment if not set already

 -- Globus Toolkit <support@globus.org>  Mon, 08 Jun 2015 19:14:16 -0400

globus-gssapi-gsi (11.18-1+gt6.@distro@) @distro@; urgency=low

  * Revert to HYBRID name mode by default

 -- Globus Toolkit <support@globus.org>  Thu, 04 Jun 2015 11:31:08 -0400

globus-gssapi-gsi (11.17-1+gt6.@distro@) @distro@; urgency=low

  * Threaded test fixes

 -- Globus Toolkit <support@globus.org>  Mon, 01 Jun 2015 17:23:05 -0400

globus-gssapi-gsi (11.16-1+gt6.@distro@) @distro@; urgency=low

  * Update autoconf script

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 10:22:17 -0400

globus-gssapi-gsi (11.15-1+gt6.@distro@) @distro@; urgency=low

  * Add config file for GSI options
  * Allow configuration of SSL cipher suite
  * Allow server preference for SSL cipher suite ordering
  * Fix thread test to run without unix domain sockets

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 08:00:43 -0400

globus-gssapi-gsi (11.14-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:29:40 -0500

globus-gssapi-gsi (11.13-2+gt6.@distro@) @distro@; urgency=low

  * Add dependency on openssl

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 10:50:57 -0400

globus-gssapi-gsi (11.13-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Use consistent PREDEFINED in all Doxyfiles
  * Fix dependency version
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 10:50:57 -0400

globus-gssapi-gsi (11.12-1+gt6.@distro@) @distro@; urgency=low
